# olympflow-2.0

./: .gitignore  README.md  pyproject.toml
archive/pre_public_release/scripts/: extract_selected_pages.py  merge_tasks_across_pages.py  ocr_all_pages.py  ocr_selected_pages.py  split_ocr_into_tasks.py
data/clusters/: clustering_summary.json
data/clusters/best_dense_agglomerative/: clusters.json  clusters_readable.txt  records_with_clusters.jsonl  summary.json
data/dataset/: dataset.jsonl  dataset_summary.json
data/dataset_grouped/: dataset_grouped.csv
data/features/dense/: embeddings.npy  meta.json  records_with_embedding_index.jsonl
data/features/tfidf/: examples.txt  neighbors.json
data/final_mistral/: dataset.csv  dataset.json
data/final_mistral_grouped/: dataset_grouped.json  dataset_grouped.jsonl
scripts/01_pdf/: render_book_pages.py
scripts/02_ocr/: merge_cross_page_tasks.py  run_mistral_ocr.py  split_pages_into_tasks.py
scripts/03_dataset/: build_final_dataset.py  build_grouped_dataset.py
scripts/04_embeddings/: build_dense_embeddings.py  build_tfidf_baseline.py  evaluate_dense_embeddings.py  evaluate_tfidf_baseline.py
scripts/05_clustering/: export_best_clusters.py  run_clustering_baselines.py
scripts/stage1_pdf/: extract_page_text.py  inspect_pdf.py
scripts/stage2_ocr/: compare_local_vs_mistral_ocr.py  merge_tasks_across_pages.py  split_ocr_into_tasks.py
scripts/stage4_dataset/: build_dataset.py  build_dataset_mistral.py  label_groups_by_fours.py
scripts/stage5_embeddings/: build_tfidf_baseline.py
(+2704 files in other folders)
